--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/maciejziemichod/Exercise-Tracker#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "materialize-css": "^1.0.0-rc.2",
     "mongodb": "^3.5.9",
