--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "repository": {
